Change the title of the document and fix CSS link error

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link href="./style.css" rel="stylesheet" />
+    <title>Etch-A-Sketch</title>
+    <link rel="stylesheet" href="./style.css" />
     <script src="./js-file.js" defer></script>
   </head>
   <body></body>
