--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Etch-A-Sketch</title>
-    <link rel="stylesheet" href="./style.css" />
+
+    <link rel="stylesheet" href="./styles.css" />
+
     <script src="./js-file.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="container"></div>
+  </body>
 </html>
