Add button for prompt

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="./js-file.js" defer></script>
   </head>
   <body>
+    <button class="numPrompt">Click for number of sides</button>
     <div class="container"></div>
   </body>
 </html>
