Add div as container for the button to center it

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <script src="./js-file.js" defer></script>
   </head>
   <body>
-    <button class="numPrompt">Click for number of sides</button>
+    <div class="button">
+      <button class="numPrompt">Click for number of sides</button>
+    </div>
+
     <div class="container"></div>
   </body>
 </html>
