--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <title>Etch-A-Sketch</title>
 
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&family=Press+Start+2P&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,300&display=swap"
+      rel="stylesheet"
+    />
 
     <script src="./js-file.js" defer></script>
   </head>
   <body>
+    Etch-A-Sketch
     <div class="button">
       <button class="numPrompt">Click for number of sides</button>
     </div>
